# haskell-dnc-mergesort

./: .gitignore  README.md  haskell-dnc-mergesort.cabal
app/: Main.hs
